# Personal_Finance_Tracker

./: .env.example  .gitignore  CLAUDE.md  README.md  app.py  pyproject.toml
.streamlit/: config.toml
core/: categorisation.py  database.py  ingestion.py  llm.py  reconciliation.py  ui_helpers.py
data/: categories.json
docs/: CONTRIBUTING.md
pages/: 1_Upload.py  2_Reconcile.py  3_Categorise.py  4_Dashboard.py  5_Settings.py
tests/: test_dashboard_date_range.py  test_ingestion_sign.py  test_llm_categorisation.py  test_sample_files.py
