[project]
name = "personal-finance"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.84.0",
    "groq>=1.0.0",
    "numpy>=2.4.2",
    "openai>=2.24.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pdfplumber>=0.11.9",
    "plotly>=6.6.0",
    "python-dotenv>=1.2.2",
    "rapidfuzz>=3.14.3",
    "sqlalchemy>=2.0.48",
    "streamlit>=1.55.0",
    "thefuzz>=0.22.1",
]
